Add onclick to button and remove button

--- a/task-1/form_rows.html
+++ b/task-1/form_rows.html
@@ -7,10 +7,11 @@
 </head>
 <body>
 <div class="container">
-    <button id="add_row">Add row</button>
+    <button id="add_row" onclick = createRow()>Add row</button>
     <form method="GET">
         <label for="item_1">Item 1:</label><input type="text" name="item_1" id="item_1"/> <br/>
     </form>
+    <button id="remove_row" onclick = removeRow()> Remove row </button>
 </div>
 </body>
 </html>
