--- a/task-2/random_grid.html
+++ b/task-2/random_grid.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../grid.css" media="screen">
 </head>
 <body>
-<div class="container"></div>
+<div class="container">
+</div>
 </body>
 </html>
